CHANGELOG for Close Combat Free.

Quite a lot of basic engine stuff was done before this changelog was created. Some more history can be devised from git sources (although even there, the thing is not complete).

=== === === ===
13.12.2011:
 - add background to Scenario
 - update ScenarioMenu with some better visuals
 - 

12.12.2011:
 - add ScenarioMenu
 - modify Scenario to be more dynamic (allow to instantiate empty Scenario)
 - add default hipsometric image (black)
 - add Scenario_tst2

11.12.2011:
 - modify RosterMenu and SoldierMenu to resize appropriately
 - QRC is here to stay - merge QRC branch into development
 - remove all trial engines from project tree

10.12.2011:
 - various style and font changes to fit Android
 - make TopMenu flickable
 - make BottomMenu flickable
 - move terrainInfoText below TopMenu
 - add imgResource (speeds up compilation time significantly)

09.12.2011:
 - move key press handling into ScenarioLogic
 - QRC take 2

08.12.2011:
 - fix key presses not working when BottomMenu is hidden (ContextMenu was stealing focus)
 - add global opacity to Map.qml
 - make SoldierMenu a bit more flexible, when it comes to it's width
 - rearrange files. C++ now resides in src/, core qml in qml/, and user-visible content
   in maps/, scenarios/ and units/
 - remove JS containers, substitute them with built-in QML list and variant properties
 - add proper "soldiers" property to Unit.qml

07.12.2011:
 - made visibility of items in BottomMenu be based on opacity, with a NumberAnimation
 - add move transitions for items in BottomMenu

06.12.2011:
 - ContextMenu is now displayed on double click when no unit is being followed
 - all menus backgrounds' colours are now parametrised
 - add ContextMenu to BottomMenu on mobile mode
 - add terrainInfoMode for mobile mode
 - change TopMenu transition to be anchor-based, not x-based

05.12.2011:
 - parametrized menus, they should look OK on different screen sizes (and densities). Still needs testing,